# ChangeLog for net-www/mozilla
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/Attic/ChangeLog,v 1.98 2003/07/06 18:09:29 azarah Exp $

*mozilla-1.4 (06 Jul 2003)

  06 Jul 2003; Martin Schlemmer <azarah@gentoo.org> mozilla-1.4.ebuild:
  New version.  Some cleanups; enigmail needs fixing as I cannot connect
  to mozdev.org.

  29 Jun 2003; Tavis Ormandy <taviso@gentoo.org> mozilla-1.3-r2.ebuild:
  stable on alpha

  20 Jun 2003; Jason Wever <weeve@gentoo.org> mozilla-1.3-r2.ebuild:
  Changed ~sparc keyword to sparc.

*mozilla-1.3-r2 (09 Jun 2003)

  09 Jun 2003; Brad Laue <brad@gentoo.org> mozilla-1.3-r2.ebuild:
  Compile fix for Pentium 4 users - filter out -msse2 if it's present in CFLAGS

  21 May 2003; Martin Schlemmer <azarah@gentoo.org> mozilla-1.3-r1.ebuild :
  Mark stable for x86.  Update enigmail bug #20234.

  27 Apr 2003; Martin Schlemmer <azarah@gentoo.org> mozilla.sh :
  Fix it to run with bash and not sh, as it have bash specific features,
  bug #19782.

  18 Apr 2003; foser <foser@gentoo.org> mozilla-1.3-r1.ebuild :
  Fixed xft dep to be virtual

  10 Apr 2003; Martin Schlemmer <azarah@gentoo.org> mozilla-1.3-r1.ebuild :
  Change permissions on compreg.dat in hope to fix bug #19034.

  30 Mar 2003; Martin Schlemmer <azarah@gentoo.org> mozilla-1.3-r1.ebuild :
  Seems like the mail component have issues if the composer is disabled,
  so only disable if we disable mail.

*mozilla-1.3-r1 (22 Mar 2003)

  22 Mar 2003; Martin Schlemmer <azarah@gentoo.org> mozilla-1.3-r1.ebuild :
  Add Gtk2 patch.  Add default/prefs/xft.js when Xft is enabled.  Some other
  long overdue cleanups.

*mozilla-1.3 (18 Mar 2003)

  21 Mar 2003; Jay Kwak <jayskwak@gentoo.org> mozilla-1.3.ebuild :
  Add XIM input patch for GTK
  
  18 Mar 2003; Martin Schlemmer <azarah@gentoo.org> mozilla-1.3.ebuild :
  New version.

  13 Mar 2003; Olivier Reisch <doctomoe@gentoo.org> mozilla-1.2.1-r5.ebuild :