@@ -1,10 +1,10 @@
-MD5 1db8953aa4b37df921925ce1d8caef6a ChangeLog 17537
+MD5 883fe4c6e312826f8ebf53fd88d036f6 ChangeLog 17811
 MD5 97c3777f17c2b6c320c2fa9fba74041f mozilla-1.0.1-r3.ebuild 15212
 MD5 4855edccbe0b8fcb1ee7dfb4cc3fb71a mozilla-1.1-r1.ebuild 14822
 MD5 de55659daa79b5c545b604ab3def7963 mozilla-1.2.1-r5.ebuild 20931
 MD5 f9f43dd3dc176189f1a5da3eb5698767 mozilla-1.3-r1.ebuild 16657
 MD5 5244675fb2e956e4a020f7389dd74709 mozilla-1.3-r2.ebuild 16662
-MD5 529694da05a6e6c7e8a0555389ca4716 mozilla-1.4.ebuild 16398
+MD5 fe3e18f38b21844e96e3e3d67ff9f73a mozilla-1.4.ebuild 16380
 MD5 2245cc4f37902e2c6dd188f72874fbb3 files/10mozilla 60
 MD5 cf872ecce56e05c488ae7f41b50dec31 files/digest-mozilla-1.0.1-r3 281
 MD5 eccaf421f7e91faad5f835cadca4263e files/digest-mozilla-1.1-r1 202
