@@ -1,6 +1,13 @@
 # ChangeLog for net-www/mozilla
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/Attic/ChangeLog,v 1.98 2003/07/06 18:09:29 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/Attic/ChangeLog,v 1.99 2003/07/08 09:17:57 brad Exp $
+
+  08 Jul 2003; Brad Laue <brad@gentoo.org> mozilla-1.4.ebuild:
+  Bring Mozilla 1.4 with enigmail out into the open now that mozdev is back and
+  the files are on our mirrors.
+  
+  Small change to the enigmail sources, which seem not to include a Makefile
+  anymore. Oh well.
 
 *mozilla-1.4 (06 Jul 2003)
 
